Add current project display on student dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h2 id="welcome-message">Welcome</h2>
+    <div id="current-project">
+      <h3>Current project you are working on:</h3>
+      <p id="project-name"></p>
+    </div>
     <button id="logout-button">Logout</button>
     <script src="dashboard.js"></script>
   </body>
