Add GraphQL queries (Skills) and fetch functions in dashboard.js || Update the cookie expiry

--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,10 @@
       <h3>Current project you are working on:</h3>
       <p id="project-name"></p>
     </div>
+    <div id="skills">
+      <h3>Your Skills:</h3>
+      <ul id="skills-list"></ul>
+    </div>
     <button id="logout-button">Logout</button>
     <script src="dashboard.js"></script>
   </body>
