--- a/dashboard.html
+++ b/dashboard.html
@@ -7,14 +7,22 @@
   </head>
   <body>
     <h2 id="welcome-message">Welcome</h2>
+    
+    <div id=user-info>
+      <h3>Your Information:</h3>
+      <ul id="user-info-list"></ul>
+    </div>
+
     <div id="current-project">
       <h3>Current project you are working on:</h3>
       <p id="project-name"></p>
     </div>
+    
     <div id="skills">
       <h3>Your Skills:</h3>
       <ul id="skills-list"></ul>
     </div>
+
     <button id="logout-button">Logout</button>
     <script src="dashboard.js"></script>
   </body>
