Added audit ratio

--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,12 @@
       <p id="project-name"></p>
     </div>
     
+    </div>
+    <div id="audit-info">
+      <h3>Your Audit Information:</h3>
+      <ul id="audit-info-list"></ul>
+  </div>    
+
     <div id="skills">
       <h3>Your Skills:</h3>
       <ul id="skills-list"></ul>
