--- a/dashboard.html
+++ b/dashboard.html
@@ -24,6 +24,11 @@
       <ul id="audit-info-list"></ul>
   </div>    
 
+  <div id="xp">
+    <h3>Your XP:</h3>
+    <p id="xp-value"></p>
+  </div>
+
     <div id="skills">
       <h3>Your Skills:</h3>
       <ul id="skills-list"></ul>
