--- a/dashboard.html
+++ b/dashboard.html
@@ -7,35 +7,30 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
   </head>
   <body>
-    <h2 id="welcome-message">Welcome</h2>
-    
-    <div id=user-info>
-      <h3>Your Information:</h3>
-      <ul id="user-info-list"></ul>
+     <h2 id="welcome-message">Welcome</h2>
+    <div class="bentobox-container">
+      <div id="user-info" class="bentobox-item">
+        <h3>Your Information:</h3>
+        <ul id="user-info-list"></ul>
+      </div>
+      <div id="current-project" class="bentobox-item">
+        <h3>Current project you are working on:</h3>
+        <p id="project-name"></p>
+      </div>
+      <div id="audit-info" class="bentobox-item">
+        <h3>Your Audit Information:</h3>
+        <ul id="audit-info-list"></ul>
+      </div>
+      <div id="xp" class="bentobox-item">
+        <h3>Your XP:</h3>
+        <p id="xp-value"></p>
+      </div>
+      <div id="skills" class="bentobox-item">
+        <h3>Your Skills:</h3>
+        <ul id="skills-list"></ul>
+      </div>
+      <button id="logout-button" class="bentobox-item">Logout</button>
     </div>
-
-    <div id="current-project">
-      <h3>Current project you are working on:</h3>
-      <p id="project-name"></p>
-    </div>
-    
-    </div>
-    <div id="audit-info">
-      <h3>Your Audit Information:</h3>
-      <ul id="audit-info-list"></ul>
-  </div>    
-
-  <div id="xp">
-    <h3>Your XP:</h3>
-    <p id="xp-value"></p>
-  </div>
-
-    <div id="skills">
-      <h3>Your Skills:</h3>
-      <ul id="skills-list"></ul>
-    </div>
-
-    <button id="logout-button">Logout</button>
     <script src="dashboard.js"></script>
   </body>
 </html>
