--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
   </head>
   <body>
-    <div id="login-form">
-      <h2>Student Login</h2>
-      <form>
-        <label for="username-or-email">Username or Email:</label>
-        <input type="text" id="username-or-email" name="username-or-email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <input type="submit" value="Login">
-        <br>
-        <br>
-        <p id="error-message"></p>
-      </form>
+    <div class="bentobox-container">
+      <div id="login-form" class="bentobox-item">
+        <h2>Student Login</h2>
+        <form>
+          <label for="username-or-email">Username or Email:</label>
+          <input type="text" id="username-or-email" name="username-or-email" required>
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required>
+          <input type="submit" value="Login">
+          <br>
+          <br>
+          <p id="error-message"></p>
+        </form>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
