--- a/dashboard.html
+++ b/dashboard.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Dashboard</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
   </head>
   <body>
-     <h2 id="welcome-message">Welcome</h2>
-    <div class="bentobox-container">
-      <div id="user-info" class="bentobox-item">
-        <h3>Your Information:</h3>
-        <ul id="user-info-list"></ul>
+    <div class="container">
+      <h2 id="welcome-message" class="text-center my-4">Welcome</h2>
+      
+      <div class="bentobox">
+        <div id="user-info" class="bentobox-item">
+          <h3>Your Information:</h3>
+          <ul id="user-info-list"></ul>
+        </div>
+        <div id="current-project" class="bentobox-item">
+          <h3>Current Project:</h3>
+          <p id="project-name"></p>
+        </div>
+        <div id="audit-info" class="bentobox-item">
+          <h3>Audit Information:</h3>
+          <ul id="audit-info-list"></ul>
+        </div>
+        <div id="xp" class="bentobox-item">
+          <h3>Your XP:</h3>
+          <p id="xp-value"></p>
+        </div>
+        <div id="skills" class="bentobox-item">
+          <h3>Your Skills:</h3>
+          <ul id="skills-list"></ul>
+        </div>
       </div>
-      <div id="current-project" class="bentobox-item">
-        <h3>Current project you are working on:</h3>
-        <p id="project-name"></p>
-      </div>
-      <div id="audit-info" class="bentobox-item">
-        <h3>Your Audit Information:</h3>
-        <ul id="audit-info-list"></ul>
-      </div>
-      <div id="xp" class="bentobox-item">
-        <h3>Your XP:</h3>
-        <p id="xp-value"></p>
-      </div>
-      <div id="skills" class="bentobox-item">
-        <h3>Your Skills:</h3>
-        <ul id="skills-list"></ul>
-      </div>
-      <button id="logout-button" class="bentobox-item">Logout</button>
+      
+      <button id="logout-button" class="btn block-cube block-cube-hover">Logout</button>
     </div>
     <script src="dashboard.js"></script>
   </body>
