--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Login Page</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
   </head>
   <body>
-    <div class="bentobox-container">
-      <div id="login-form" class="bentobox-item">
+    <div class="container">
+      <div class="login-form">
         <h2>Student Login</h2>
-        <form>
-          <label for="username-or-email">Username or Email:</label>
-          <input type="text" id="username-or-email" name="username-or-email" required>
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required>
-          <input type="submit" value="Login">
-          <br>
-          <br>
+        <form class="form" autocomplete="off">
+          <div class="control">
+            <label for="username-or-email">Username or Email:</label>
+            <input type="text" id="username-or-email" name="username-or-email" placeholder="Username/Email" required>
+          </div>
+          <div class="control">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+          </div>
+          <button type="submit" class="btn">Log In</button>
           <p id="error-message"></p>
         </form>
+      </div>
       </div>
     </div>
     <script src="script.js"></script>
