--- a/index.html
+++ b/index.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Login Page</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="login-form">
-        <h2>Student Login</h2>
-        <form class="form" autocomplete="off">
-          <div class="control">
-            <label for="username-or-email">Username or Email:</label>
-            <input type="text" id="username-or-email" name="username-or-email" placeholder="Username/Email" required>
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title text-center">Student Login</h2>
+              <form class="form" autocomplete="off">
+                <div class="form-group">
+                  <label for="username-or-email">Username or Email:</label>
+                  <input type="text" class="form-control" id="username-or-email" name="username-or-email" placeholder="Username/Email" required>
+                </div>
+                <div class="form-group">
+                  <label for="password">Password:</label>
+                  <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Log In</button>
+                <p id="error-message" class="text-danger mt-3"></p>
+              </form>
+            </div>
           </div>
-          <div class="control">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Password" required>
-          </div>
-          <button type="submit" class="btn">Log In</button>
-          <p id="error-message"></p>
-        </form>
-      </div>
+        </div>
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
