--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -15,7 +14,7 @@
       <h2 id="welcome-message" class="text-center my-4">Welcome</h2>
       
       <div class="row">
-        <div id="user-info" class="col-md-6 mb-4">
+        <div id="user-info" class="col-md-4 mb-4">
           <div class="card">
             <div class="card-body">
               <h3 class="card-title">Your Information:</h3>
@@ -23,7 +22,15 @@
             </div>
           </div>
         </div>
-        <div id="current-project" class="col-md-6 mb-4">
+        <div id="xp" class="col-md-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Your XP:</h3>
+              <p id="xp-value"></p>
+            </div>
+          </div>
+        </div>
+        <div id="current-project" class="col-md-4 mb-4">
           <div class="card">
             <div class="card-body">
               <h3 class="card-title">Current Project:</h3>
@@ -31,7 +38,7 @@
             </div>
           </div>
         </div>
-        <div id="audit-info" class="col-md-6 mb-4">
+        <div id="audit-info" class="col-md-12 mb-4">
           <div class="card">
             <div class="card-body">
               <h3 class="card-title">Audit Information:</h3>
@@ -57,36 +64,28 @@
             </div>
           </div>
         </div>
-
-        <div id="xp" class="col-md-6 mb-4">
-          <div class="card">
-            <div class="card-body">
-              <h3 class="card-title">Your XP:</h3>
-              <p id="xp-value"></p>
-            </div>
-          </div>
-        </div>
-        <div id="skills" class="col-md-12 mb-4">
-          <div class="card">
-            <div class="card-body">
-              <h3 class="card-title">Your Skills:</h3>
-              <ul id="skills-list" class="list-unstyled"></ul>
-              <div class="row">
-                <div class="col-md-6">
-                  <canvas id="technical-skills-chart"></canvas>
-                </div>
-                <div class="col-md-6">
-                  <canvas id="technologies-chart"></canvas>
-                </div>
+      </div>
+      <div id="skills" class="col-md-12 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Your Skills:</h3>
+            <ul id="skills-list" class="list-unstyled"></ul>
+            <div class="row">
+              <div class="col-md-6">
+                <canvas id="technical-skills-chart"></canvas>
+              </div>
+              <div class="col-md-6">
+                <canvas id="technologies-chart"></canvas>
               </div>
             </div>
           </div>
         </div>
+      </div>
       
       <button id="logout-button" class="btn btn-danger btn-block">Logout</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/js/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="dashboard.js"></script>
   </body>
