Refactor dashboard.html and dashboard.js to display last activity and fetch the last 4 projects--Peronal Noted - Recovery Point

--- a/dashboard.html
+++ b/dashboard.html
@@ -38,6 +38,14 @@
             </div>
           </div>
         </div>
+        <div id="last-activity" class="col-md-12 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Last Activity:</h3>
+              <ul id="last-activity-list" class="list-unstyled"></ul>
+            </div>
+          </div>
+        </div>
         <div id="audit-info" class="col-md-12 mb-4">
           <div class="card">
             <div class="card-body">
