Removed canvas rendering charts, added SVG, refactor css

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
   </head>
   <body>
     <div class="container mt-5">
@@ -54,20 +54,20 @@
               <div class="mt-3">
                 <h4>Total Audits Done <i class="bi bi-arrow-up"></i></h4>
                 <div class="progress">
-                  <div id="total-audits-done-progress" class="progress-bar bg-success" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  <svg id="total-audits-done-progress"></svg>
                 </div>
                 <p id="total-audits-done-text"></p>
               </div>
               <div class="mt-3">
                 <h4>Total Audits Received <i class="bi bi-arrow-down"></i></h4>
                 <div class="progress">
-                  <div id="total-audits-received-progress" class="progress-bar bg-info" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                  <svg id="total-audits-received-progress"></svg>
                 </div>
                 <p id="total-audits-received-text"></p>
               </div>
               <div class="mt-3">
                 <h4>Audit Ratio</h4>
-                <p id="audit-ratio-text" class="font-weight-bold"></p>
+                <h4 id="audit-ratio-text" class="font-weight-bold"></h4>
               </div>
             </div>
           </div>
@@ -80,10 +80,10 @@
             <ul id="skills-list" class="list-unstyled"></ul>
             <div class="row">
               <div class="col-md-6">
-                <canvas id="technical-skills-chart"></canvas>
+                <svg id="technical-skills-chart" width="400" height="500"></svg>
               </div>
               <div class="col-md-6">
-                <canvas id="technologies-chart"></canvas>
+                <svg id="technologies-chart" width="500" height="500"></svg>
               </div>
             </div>
           </div>
