Allign SVG chart Lables

--- a/dashboard.html
+++ b/dashboard.html
@@ -79,10 +79,10 @@
             <ul id="skills-list" class="list-unstyled"></ul>
             <div class="row">
               <div class="col-md-6 d-flex justify-content-center">
-                <svg id="technical-skills-chart" width="400" height="500"></svg>
+                <svg id="technical-skills-chart" width="100%" height="500"></svg>
               </div>
               <div class="col-md-6 d-flex justify-content-center">
-                <svg id="technologies-chart" width="400" height="500"></svg>
+                <svg id="technologies-chart" width="100%" height="500"></svg>
               </div>
             </div>
           </div>
