Update index.html, dashboard.html, and style.css
- Add project description to index.html
- Adjust logout button size in dashboard.html
- Update background color and font family in style.css
- Add background transparency to card in style.css

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="col-md-4 text-right">
-      <a href="#" id="logout-button" class="text-danger">
-        <i class="bi bi-power" style="font-size: 1.5rem;"></i>
+      <a href="#" id="logout-button" class="text-danger">Log Out
+        <i class="bi bi-power" style="font-size: 1.9rem;"></i>
       </a>
     </div>
   </div>
@@ -106,7 +106,7 @@
 <footer class="text-center mt-5">
   <p>Want to build your own dashboard? Contact me at 
     <a href="mailto:amiriqbal87@gmail.com" class="text-decoration-none">
-      <i class="bi bi-envelope-fill"></i>
+      <i class="bi bi-envelope"></i>
     </a>
   </p>
 </footer>
