Responsives for the graph corrected, some minor typo fixed

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="col-md-4 text-right">
-      <a href="#" id="logout-button" class="text-danger">Log Out
+      <a href="#" id="logout-button" class="text-danger" >Log Out
         <i class="bi bi-power" style="font-size: 1.9rem;"></i>
       </a>
     </div>
@@ -104,7 +104,7 @@
 
     <!-- Footer -->
 <footer class="text-center mt-5">
-  <p>Want to build your own dashboard? Contact me at 
+  <p>Want to build/create your own dashboard? Get in touch with me 
     <a href="mailto:amiriqbal87@gmail.com" class="text-decoration-none">
       <i class="bi bi-envelope"></i>
     </a>
