--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p id="error-message" class="text-danger mt-3"></p>
               </form>
               <p class="mt-4 text-center">
-                This project is a recreation of the user profile system of the Reboot01 school, showcasing XP tracking, programming skills, and other information. It uses GraphQL to queries for a dynamic dashboard and SVG charts from the GraphQL data.
+                This project is a recreation of the user dashboard system of the Reboot01 school, showcasing XP tracking, programming skills, and other information. It uses GraphQL queries for a dynamic dashboard and SVG charts from the GraphQL data.
               </p>
             </div>
           </div>
