--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
             <div class="actionsC">
                <div class="actionBtn">
-                  <a target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" style="background-color: rgb(4, 16, 12);" href="+97333837381">
+                  <a target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" style="background-color: rgb(4, 16, 12);" href="https://wa.me/+97333837381">
                      <div class="icon iconColor">
                         <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5">
                            <path style="fill:none" d="M0 0h24v24H0z"></path>
